# MicroGame

./: CMakeLists.txt  Jenkinsfile  game_loop.h  main.cpp  mingw64.cmake  package.cmake  scope_exit.hpp  sdl2.cmake  vs2017.cmake
bamboo-specs/: bamboo.yaml
